Optimize more endpoints