@@ -5,7 +5,6 @@ import net.modtale.config.properties.AppFrontendProperties;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -14,23 +13,18 @@ import static java.util.Map.entry;
 @RestController
 public class ClientMetadataController {
 
-    private final String backendUrl;
-    private final String frontendUrl;
+    private final Map<String, Object> metadata;
 
     public ClientMetadataController(
             AppBackendProperties backendProperties,
             AppFrontendProperties frontendProperties
     ) {
-        this.backendUrl = backendProperties.url();
-        this.frontendUrl = frontendProperties.url();
-    }
-
-    @GetMapping("/client-metadata.json")
-    public Map<String, Object> getClientMetadata() {
+        String backendUrl = backendProperties.url();
+        String frontendUrl = frontendProperties.url();
         String clientId = backendUrl + "/client-metadata.json";
         String redirectUri = backendUrl + "/login/oauth2/code/bluesky";
 
-        return Map.ofEntries(
+        this.metadata = Map.ofEntries(
                 entry("client_id", clientId),
                 entry("client_name", "Modtale"),
                 entry("client_uri", backendUrl),
@@ -39,11 +33,16 @@ public class ClientMetadataController {
                 entry("policy_uri", frontendUrl + "/privacy"),
                 entry("redirect_uris", List.of(redirectUri)),
                 entry("scope", "atproto transition:generic"),
-                entry("grant_types", Arrays.asList("authorization_code", "refresh_token")),
+                entry("grant_types", List.of("authorization_code", "refresh_token")),
                 entry("response_types", List.of("code")),
                 entry("token_endpoint_auth_method", "none"),
                 entry("application_type", "web"),
                 entry("dpop_bound_access_tokens", true)
         );
+    }
+
+    @GetMapping("/client-metadata.json")
+    public Map<String, Object> getClientMetadata() {
+        return metadata;
     }
 }
